<resources>
    <string name="app_name">WorldBank</string>
    <string name="country_name">country name</string>
    <string name="topic_name">topic name</string>
    <string name="linechart">linechart</string>
    <string name="download">download</string>
    <string name="bar_chart">bar_chart</string>
    <string name="scatter_chart">scatter_chart</string>
    <string name="get_information_about_this_entry">Get information about this entry</string>
    <string name="browsebycountry">Country</string>
    <string name="logo">logo</string>
    <string name="value">value</string>
    <string name="information">information</string>
    <string name="credits">credits</string>
    <string name="btnback">btn_back</string>
    <string name="line_chart">Line chart</string>
    <string name="barchart">Bar chart</string>
    <string name="scatterchart">Scatter chart</string>
    <string name="yourcharts">Your charts</string>
    <string name="credits_text">Developed by:\nBovi Andrea, Martelletti Ambra, Pavia Roberto\n\n\nCredits:\nOmegaRecyclerView - Omega-R\nPhilJay - MPAndroidChart\ndevmike01 - PersistantRecyclerAdapter\nGoogle - gson</string>
    <string name="titolo">Progetto Mobile Programming 2017/2018 - WorldBank</string>
    <string name="search_for_online">Save search for offline usage: </string>
    <string name="information_dialog">Information</string>
    <string name="credits_information">Credits</string>
    <string name="clear_cache">Clear cache</string>
    <string name="search_information">search information</string>
    <string name="country_two_points">Country:</string>
    <string name="topic_two_points">Topic:</string>
    <string name="indicator_two_points">Indicator:</string>
    <string name="text">text</string>
    <string name="searched_in_data">Searched in data:</string>
    <string name="show_plot_of_this_search">Show plot of this search</string>
    <string name="implement_interface">must implement Interface!</string>
    <string name="network_unavailable">Your network is unavailable! Please enable offline mode or get some internet connection!</string>
    <string name="browse_by">Browse by:</string>
    <string name="country_label">Country</string>
    <string name="topic_label">Topic</string>
    <string name="browse_by_country">Browse by: Country</string>
    <string name="indicator_label">Indicator</string>
    <string name="browse_by_topic">Browse by : Topic</string>
    <string name="click_on_browse_by">Click on \'Browse by\' tab to go back in search!</string>
    <string name="make_a_choice">Please make a choice first!</string>
    <string name="no_chart">No chart saved found!</string>
    <string name="exit">Press again to exit</string>
    <string name="cache_cleared">Cache cleared!</string>
    <string name="no_data">NO DATA AVAILABLE</string>
    <string name="success_download">Success Download</string>
    <string name="share_title">Share plot</string>
    <string name="topic">Topic</string>
    <string name="country">Country</string>
    <string name="no_connect">No connection! Connect to network and retry!</string>
    <string name="no_info">No information available</string>
    <string name="click_again">Please click again and allow permission!</string>
    <string name="share_saved_local_chart">Share</string>
    <string name="delete_saved_local_chart">Delete</string>
    <string name="alert_title">Choose action</string>
    <string name="ok_alert">Ok</string>
    <string name="cancel_alert">Cancel</string>
    <string name="file_deleted">File deleted!</string>
    <string name="file_not_deleted">Can\'t delete this file!</string>
    <string name="show_in_gallery">Show in gallery</string>
    <string name="description">X : date , Y : value</string>
    <string name="click_info">Click i for info</string>
    <string name="delete_this_chart">Delete chart</string>
</resources>
