<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    android:padding="4dp"
    card_view:cardUseCompatPadding="true"
    android:id="@+id/cardview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:maxLines="50"
            android:scrollbars="vertical"
            android:id="@+id/nameofcountry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/country_two_points"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameoftopic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/topic_two_points"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameofindicator"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/indicator_two_points"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valueofcountry"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/nameoftopic"
            android:text="@string/text"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/valueoftopic"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/nameoftopic"
            android:text="@string/text"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/valueofindicator"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/nameoftopic"
            android:text="@string/text"
            android:textSize="12sp"
            android:textStyle="normal" />
    </RelativeLayout>

</android.support.v7.widget.CardView>